Altera o layout e implementa a alteração de cor no dia atual.

--- a/Planner-Virtual-PLP-2021-2/Planner-Virtual-PLP-2021-2/Planner-Virtual-PLP-2021-2.csproj
+++ b/Planner-Virtual-PLP-2021-2/Planner-Virtual-PLP-2021-2/Planner-Virtual-PLP-2021-2.csproj
@@ -192,5 +192,17 @@
   <ItemGroup>
     <None Include="Resources\icone-relatorio.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fechar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\minimizar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\voltar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\avancar.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
